Criação de um Template de Valorant

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>The Super Mario Bros</title>
-  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+  <title>Quarteto Fodastico</title>
+  <link rel="icon" type="image/x-icon" href="./assets/icons8-valorant-64.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="./styles/global.css">
@@ -15,26 +15,26 @@
 <body>
   <div id="background">
     <video loop autoplay muted>
-      <source src="./assets/background-video.mp4" type="video/mp4"
+      <source src="./assets/videoplayback.mp4" type="video/mp4"
     </video>
   </div>
 
   <div id="app">
     <header>
-      <img src="./assets/logo-cap.png" alt="">
+      <img src="./assets/icone.png" alt="">
 
       <ul class="navigation">
         <li>
-          <a href="#" class="navigation__link">Home</a>
+          <a href="#" class="navigation__link">oDener</a>
         </li>
         <li>
-          <a a href="#" class="navigation__link">Story</a>
+          <a a href="#" class="navigation__link">Leaovisk</a>
         </li>
         <li>
-          <a href="#" class="navigation__link">Wallpapers</a>
+          <a href="#" class="navigation__link">matheusvercosa</a>
         </li>
         <li>
-          <a href="#" class="navigation__link">Trailer</a>
+          <a href="#" class="navigation__link">violenta</a>
         </li>
       </ul>
 
@@ -61,32 +61,28 @@
       <div class="main__info">
         <img 
         data-aos="fade-up"
-        data-aos-duration="800"
+        data-aos-duration="2000"
         data-aos-easing="ease-in-out"
-        src="./assets/logo-movie.png" 
+        src="./assets/riotgames.png" 
         width="250px"
         />
 
         <p
         data-aos="fade-up"
-        data-aos-delay="300"
-        data-aos-duration="800"
+        data-aos-delay="1000"
+        data-aos-duration="1800"
         data-aos-easing="ease-in-out">
-          Um dia, Mario e Luigi vão para no reino dos cogumelos, governado pela Princesa Peach, 
-mas ameaçado pelo rei dos Koopas, Bowser, que vai fazer de tudo para conseguir 
-reinar todos os lugares. É então quando Luigi é raptado por Bowser e o usa para 
-procurar Mario, o único capaz de deter o Koopa e reestabelexcer a paz.
+          O melhor quarteto que esse mundo já viu, com uma jogabilidade acima do nível, VioLenta e Leaovisk com no mínimo 30 kill por partida. Matheus com suas jogadas mirabolantes e Dener chegando mais perdido que cego em tiroteio e com isso confude os adversários.
         </p>
 
         <div 
         data-aos="fade-up"
-        data-aos-delay=800"
-        data-aos-duration="800"
+        data-aos-delay=2000"
+        data-aos-duration="2500"
         data-aos-easing="ease-in-out">
-          <a href="https://youtu.be/TnGl01FkMMo">Assistir trailer</a>
-          <button>
-            Comprar Ingresso
-          </button>
+          <a href="https://youtu.be/a4ccvu52uDY">Assistir trailer</a>
+          
+            <a href="https://playvalorant.com/pt-br/">Baixar Jogo</a>
         </div>
       </div>
 
@@ -95,7 +91,7 @@ procurar Mario, o único capaz de deter o Koopa e reestabelexcer a paz.
       data-aos-delay="1300"
       data-aos-duration="800"
       data-aos-easing="ease-in-out"
-      src="./assets/mario-and-luigi.png" width="600px" alt="">
+      src="./assets/download.png" width="1100px" alt="">
     </main>
 
   </div>
